Fix issue with jumping hamburger

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,6 @@ h2 {
 /* Navigation Menu -------------------------------------------------------------*/
 
 .navbar {
-    float: right;
     margin-right: 2%;
 } 
 
